--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ byteorder = "1.5.0"
 flate2 = "1.0.28"
 rand = "0.8.5"
 rulinalg = "0.4.2"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
